<resources>
    <string name="app_name">Music Player</string>
    <string name="play_all">Play All</string>
    <string name="permission_request">Permission Request</string>
    <string name="permission_request_detail">In order to access your music, you must give permissions.</string>
    <string name="give_permission">give permission</string>
    <string name="shuffle_all">ShuffleAll</string>
    <string name="sleep_timer_cancel">Cancel</string>
    <string name="sleep_timer_start">Start</string>
    <string name="sleep_timer">SleepTimer</string>
    <string name="toolbar_title_music_player">MusicPlayer</string>
    <string name="toolbar_title_recent_added">RecentAdded</string>
    <string name="toolbar_title_album">Album</string>
    <string name="toolbar_title_artist">Artist</string>
    <string name="toolbar_title_playlist">Playlist</string>
    <string name="slideBar_title_music">Music</string>
    <string name="add_to_list">AddTOList</string>
    <string name="remove_from_queue">Remove from queue</string>
    <string name="delete_from_list">Delete from device</string>
    <string name="create_new_playlist">Create New Playlist</string>
    <string name="input_name">Input Name…</string>
    <string name="delete_alert_title">Delete from device</string>
    <string name="delete_alert">Delete item from device?</string>
    <string name="delete_confrim">OK</string>
    <string name="delete_cancel">Cancel</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="minute">min</string>
    <string name="second">sec</string>
    <string name="item_detail">Detail</string>
    <string name="failed">Delete Failed</string>
    <string name="success">Delete Succeed</string>
    <string name="filename">Filename</string>
    <string name="file_path">Path</string>
    <string name="file_duration">Duration</string>
    <string name="welcome">Welcome!</string>
    <string name="intro">This is a simple music player, with permissions being requested on a slide…</string>
    <string name="feature">Feature</string>
    <string name="feature_intro">Online lyric，match missing album art and artist photo</string>
    <string name="enjoy">Enjoy!</string>
    <string name="alldone">All done</string>
    <string name="selected"> selected</string>
    <string name="delete">Delete</string>
    <string name="must_have_name">Must have a name</string>
    <string name="album">Album: </string>
    <string name="artist"> Artist: </string>
    <string name="set_success">Set Success</string>
    <string name="set_failed">Set Failed</string>
    <string name="wrong_time">Wrong Time!</string>
    <string name="added">Added</string>
    <string name="already_have">Already have a list name</string>
    <string name="adding">Adding…</string>
    <string name="delete_download_image">Delete downloaded images?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ui">UI</string>
    <string name="play_next">Play next</string>
    <string name="use_default_album_art">Use Default Album Art</string>
    <string name="launch">Launch</string>
    <string name="start_page">Start Page</string>
    <string name="notification">Notification</string>
    <string name="color_notification">Color Notification</string>
    <string name="lock_screen_notification">Show Notification On Lockscreen</string>
    <string name="other">Other</string>
    <string name="about">About</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading…</string>
    <string name="settings">Settings</string>
    <string name="version">Version</string>
    <string name="developer">Developer</string>
    <string name="developer_name">IronBear</string>
    <string name="open_source">Open Source Licenses</string>
    <string name="about_music_player">MusicPlayer is a light weight local music player for android</string>
    <string name="project_code">Project Code: </string>
    <string name="license">License: </string>
    <string name="match_artist_cover">Match online artist cover</string>
    <string name="bitrate">Bitrate</string>
    <string name="sampling_rate">Sampling rate</string>
    <string name="update_artist">Update artist image</string>
    <string name="update_artist_from_local">Choose local artist image</string>
    <string name="filter">Filter</string>
    <string name="ignore">Ignore than </string>
    <string name="ignore_short_tracks">Ignore short tracks</string>
    <string name="no_lyric">No lyric found on web</string>
    <string name="searching_lyric">Searching</string>
    <string name="keep_screen_on">Keep screen on</string>
    <string name="lyric">Lyric</string>
    <string name="load_web_lyric"><font size="15">Auto load web lyric</font>\nwhen embedded not found</string>\
    <string name="search_input_hint">search song,album,artist</string>
    <string name="search_none">no match result</string>
    <string name="tag_editor">Tag editor</string>
    <string name="song_title">Title</string>
    <string name="track">Track</string>
    <string name="year">Year</string>
    <string name="not_lyric_file">This file is not a lyric file</string>
    <string name="not_image_file">This file is not a image file</string>
    <string name="toolbar_title_folder">Folder</string>
    <string name="equalizer_cant_open">Custom equalizer won\'t work on bluetooth headset</string>
    <string name="songs">songs</string>
    <string name="cache">Clear cache</string>
    <string name="clear_cache">clearing</string>
    <string name="select_local_lyric">Select local lyric</string>
    <string name="update_lyric">Update lyric</string>
    <string name="open_failed">Can only edit mp3 file</string>
    <string name="select_all">Select all</string>
    <string name="clear_cache_judge">Clear cache?</string>
    <string name="equalizer">Equalizer</string>
    <string name="reset">Reset</string>
    <string name="enable_shuffle">Show shuffle bar on UI</string>
    <string name="only_wifi">Only on wifi</string>
    <string name="always">Always</string>
    <string name="never">Never</string>
    <string name="demo">Swipe left or right to switch song</string>
    <string name="netease_first">Preference to Netease cloud music</string>
    <string name="netease_first_1">Netease first</string>
    <string name="only_netease">Only Netease</string>
    <string name="only_Kugou">Only Kugou</string>
    <string name="netease">From Netease cloud music</string>
    <string name="accurate_update">Load Accurate lyric by Id</string>
    <string name="input_song_id">Input song\'s Netease Id</string>
    <string name="kugou">From Kugou music</string>
    <string name="lyric_source">Lyric source</string>
    <string name="crash">Sorry,App crashed,reboot shortly.Log has saved in folder MusicPlayer/crash,please send log file to the developer</string>
    <string name="gesture">Gesture</string>
    <string name="swipe_gesture">Swipe to switch song</string>
    <string name="goto_artist">Goto artist page</string>
    <string name="goto_album">Goto album page</string>
    <string name="embed_lyric">Embed lyric</string>
    <string name="embed_lyric_failed">No lyric found</string>
    <string name="already_had_lyric">This song already embed lyric</string>
    <string name="re_embed_lyric">wipe and embed with new lyric?</string>
    <string name="load_translate_netease_lyric">Load Netease\'s translate lyric</string>
    <string name="match_album_cover">Match online album cover</string>
    <string name="use_old_notification">Use old style Notification</string>
    <string name="colors">Colors</string>
    <string name="auto_night_mode">Auto Switch to Night Mode(22:00–7:00)</string>
    <string name="color_title">Theme color</string>
    <string name="primary_color">Primary color</string>
    <string name="accent_color">Accent color</string>
    <string name="color_Green">Green</string>
    <string name="color_Indigo">Indigo</string>
    <string name="color_Pink">Pink</string>
    <string name="color_Purple">Purple</string>
    <string name="color_Red">Red</string>
    <string name="color_Blue">Blue</string>
    <string name="color_LightBlue">LightBlue</string>
    <string name="color_Teal">Teal</string>
    <string name="color_Lime">Lime</string>
    <string name="color_Orange">Orange</string>
    <string name="color_DeepOrange">DeepOrange</string>
    <string name="color_Brown">Brown</string>
    <string name="color_Grey">Grey</string>
    <string name="color_BlueGrey">BlueGrey</string>
    <string name="color_Carmine">Carmine</string>
    <string name="color_Amber">Amber</string>
    <string name="color_Sandalwood">Sandalwood</string>
    <string name="color_DarkBlue1">DarkBlue</string>
    <string name="color_BambooGreen">BambooGreen</string>
    <string name="night_mode">Night Mode</string>
    <string name="change_main_window">Change Play Window Theme</string>
    <string name="unknown_error">Unknown error</string>
    <string name="auto_switch_to_night_mode">Auto Switch to Night Mode</string>
    <string name="auto_switch_to_day_mode">Auto Switch to Day Mode</string>
    <string name="select_local_album_cover">Select local album cover image</string>
    <string name="option">Option</string>
    <string name="find_new_version">New Version Available</string>
    <string name="new_version_title">What\'s New</string>
    <string name="placeholder">-</string>
    <string name="new_version_text">- 优化自动切换主题
        \n- 修改播放界面长按操作逻辑，更加易于触发
        \n- 界面微调
        \n- 从文件打开播放支持未扫描的音乐
        \n- 修复bug若干</string>
    <string name="donate">Donate</string>
    <string name="contact_me">Chat in group</string>
    <string name="check_qq_installed">Check if QQ is installed</string>
    <string name="check_alipay_installed">Check if Alipay is installed</string>
    <string name="check_coolapk_installed">Check if Coolapk market is installed</string>
    <string name="rate">Rate this app</string>
    <string name="download_now">Download Now?</string>
    <string name="download_failed">Download failed</string>
    <string name="check_update_failed">Check Update Failed</string>
    <string name="need_permission">The app is short of permissions and can not work properly</string>
</resources>
