<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:theme="@style/AppTheme">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:background="@color/material_gray"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/Theme.AppCompat.Light" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:foreground="@drawable/bottom_shadow" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ui"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:paddingEnd="15dp"
                android:paddingStart="15dp"
                android:gravity="center_vertical"
                android:text="@string/ui"
                android:textColor="@color/material_gray_dark"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/use_default_cover"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_below="@+id/ui"
                android:paddingEnd="15dp"
                android:paddingStart="15dp"
                android:gravity="center_vertical"
                android:text="@string/use_default_album_art"
                android:textSize="15sp"
                android:background="?android:attr/selectableItemBackground"
                />
            <ImageView
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/use_default_cover"
                android:background="#22616161" />
            <Switch
                android:id="@+id/keep_screen_on"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_below="@+id/line"
                android:paddingEnd="15dp"
                android:paddingStart="15dp"
                android:gravity="center_vertical"
                android:text="@string/keep_screen_on"
                android:textSize="15sp"
                android:background="?android:attr/selectableItemBackground"
                />

            <TextView
                android:id="@+id/launch_page"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_below="@+id/keep_screen_on"
                android:paddingEnd="15dp"
                android:paddingStart="15dp"
                android:gravity="center_vertical"
                android:text="@string/start_page"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <RadioGroup
                android:id="@+id/page_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/launch_page"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="?android:attr/selectableItemBackground"
                >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#22616161" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/page_music"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/material_gray_dark"
                    android:gravity="start|center_vertical"
                    android:text="@string/slideBar_title_music" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/page_artist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/material_gray_dark"
                    android:gravity="start|center_vertical"
                    android:text="@string/toolbar_title_artist" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/page_album"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/material_gray_dark"
                    android:gravity="start|center_vertical"
                    android:text="@string/toolbar_title_album" />


                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/page_playlist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/material_gray_dark"
                    android:gravity="start|center_vertical"
                    android:text="@string/toolbar_title_playlist" />


                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/page_recent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/material_gray_dark"
                    android:gravity="start|center_vertical"
                    android:text="@string/toolbar_title_recent_added" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="#22616161" />
            </RadioGroup>

            <TextView
                android:id="@+id/notification"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_below="@+id/page_group"
                android:paddingEnd="15dp"
                android:paddingStart="15dp"
                android:gravity="center_vertical"
                android:text="@string/notification"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/color_notification"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_below="@+id/notification"
                android:paddingEnd="15dp"
                android:paddingStart="15dp"
                android:gravity="center_vertical"
                android:text="@string/color_notification"
                android:background="?android:attr/selectableItemBackground"
                />

            <ImageView
                android:id="@+id/line3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/color_notification"
                android:background="#22616161" />

            <Switch
                android:id="@+id/lockscreen_album_art"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_below="@+id/line3"
                android:paddingEnd="15dp"
                android:paddingStart="15dp"
                android:gravity="center_vertical"
                android:text="@string/lock_screen_notification"
                android:textSize="15sp"
                android:background="?android:attr/selectableItemBackground"
                />


            <TextView
                android:id="@+id/filter"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_below="@+id/lockscreen_album_art"
                android:paddingEnd="15dp"
                android:paddingStart="15dp"
                android:gravity="center_vertical"
                android:text="@string/filter"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/filter_text"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_below="@+id/filter"
                android:paddingEnd="15dp"
                android:paddingStart="15dp"
                android:gravity="center_vertical"
                android:textSize="15sp"
                android:background="?android:attr/selectableItemBackground"
                />

            <TextView
                android:id="@+id/download"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_below="@+id/filter_text"
                android:paddingEnd="15dp"
                android:paddingStart="15dp"
                android:gravity="center_vertical"
                android:text="@string/download"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/download_cover"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_below="@+id/download"
                android:paddingEnd="15dp"
                android:paddingStart="15dp"
                android:gravity="center_vertical"
                android:text="@string/download_text"
                android:background="?android:attr/selectableItemBackground"
                />

            <ImageView
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/download_cover"
                android:background="#22616161" />

            <Switch
                android:id="@+id/load_web_lyric"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_below="@+id/line2"
                android:paddingEnd="15dp"
                android:paddingStart="15dp"
                android:gravity="center_vertical"
                android:text="@string/load_web_lyric"
                android:background="?android:attr/selectableItemBackground"
                />

            <TextView
                android:id="@+id/other"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_below="@+id/load_web_lyric"
                android:paddingEnd="15dp"
                android:paddingStart="15dp"
                android:gravity="center_vertical"
                android:text="@string/other"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_below="@+id/other"
                android:paddingEnd="15dp"
                android:paddingStart="15dp"
                android:gravity="center_vertical"
                android:text="@string/about"
                android:textSize="15sp"
                android:background="?android:attr/selectableItemBackground"
                />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>

