<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03A9F4">
    <TextView
        android:id="@+id/intro_title"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:padding="60dp"
        android:textColor="@color/listView_bg_color"
        android:text="@string/permission_request"/>

    <ImageView
        android:id="@+id/intro_center"
        android:layout_below="@+id/intro_title"
        android:layout_above="@+id/intro_des"
        android:layout_centerHorizontal="true"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_settings_black_48dp"/>

    <TextView
        android:padding="20dp"
        android:id="@+id/intro_des"
        android:layout_above="@+id/intro_permission"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/listView_bg_color"
        android:text="@string/permission_request_detail"/>

    <Button
        android:layout_marginBottom="80dp"
        android:id="@+id/intro_permission"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/give_permission"/>
</RelativeLayout>